# Graphix-AI-CLI

./: .gitignore  Deployment.md  LICENSE  README.md  pyproject.toml  requirements.txt  train.csv
.github/workflows/: publish.yml
graphix/: cli.py
graphix/ai/data/: cache.py  data_loader.py
graphix/ai/models/: model.py
graphix/ai/tasks/: fine_tune.py
graphix/ai/training/: trainer.py
graphix/auth/: authenticate.py
graphix/config/: constants.py  settings.py  setup.py
graphix/initiate_socket/: initiate.py
graphix/lend/: setup.py
graphix/task_manager/: listen.py
